jsonschemadsl2ecore.trafo.opt/test/test30/invalidtests/example4.test30
{
	"integer":1.222,
	"null":null,
	"number":1.32333,
	"string":"some string",
	"object":{},
	"extra":"extra"
}